@@ -2854,4 +2854,49 @@ class LifeStream_BackTypeFeed extends LifeStream_Feed
     }
 }
 register_lifestream_feed('LifeStream_BackTypeFeed');
+
+class LifeStream_LibraryThingFeed extends LifeStream_GoodReadsFeed
+{
+    const ID            = 'librarything';
+    const NAME          = 'LibraryThing';
+    const URL           = 'http://www.librarything.com/';
+
+    function __toString()
+    {
+        return $this->options['member_name'];
+    }
+
+    function get_options()
+    {
+        return array(
+            'member_name' => array('Username:', true, '', ''),
+        );
+    }
+
+    function get_public_url()
+    {
+        return 'http://www.librarything.com/catalog/'.$this->options['member_name'];
+    }
+
+    function get_url()
+    {
+        return 'http://www.librarything.com/rss/recent/'.$this->options['member_name'];
+    }
+
+    private $image_match_regexp = '/img\s+src="([^"]+\.jpg)"/i';
+
+    function yield($row)
+    {
+        preg_match($this->image_match_regexp, $row->get_description(), $match);
+
+        return array(
+            'guid'      =>  $row->get_id(),
+            'date'      =>  $row->get_date('U'),
+            'link'      =>  html_entity_decode($row->get_link()),
+            'title'     =>  html_entity_decode($row->get_title()),
+            'thumbnail' =>  $match[1],
+        );
+    }
+}
+register_lifestream_feed('LifeStream_LibraryThingFeed');
 ?>
